--- a/k8s/sa-clusterrole-definition.yaml
+++ b/k8s/sa-clusterrole-definition.yaml
@@ -1,30 +1,20 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   creationTimestamp: null
-  name: go-controller-sa-role
-  namespace: k8s-go-controller
+  name: k8s-go-controller-cr
 rules:
 - apiGroups:
   - ""
   resources:
-  - pods
-  - services
-  - namespaces
-  verbs:
-  - list
-  - get
-- apiGroups:
-  - apps
-  resources:
-  - deployments
+  - nodes
   verbs:
   - list
   - get
 - apiGroups:
     - "metrics.k8s.io"
   resources:
-    - pods
+    - nodes
   verbs:
     - get
     - list
