--- a/k8s/svc-definition.yaml
+++ b/k8s/svc-definition.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: k8s-go-controller
     role: service
-  name: k8s-endpoint-svc
+  name: k8s-backend-svc
   namespace: k8s-go-controller
 spec:
   ports:
@@ -14,6 +14,6 @@ spec:
   selector:
     app: k8s-go-controller
     role: backend
-  type: NodePort
+  type: ClusterIP
 status:
   loadBalancer: {}
