--- a/k8s/frontend-ingress.yaml
+++ b/k8s/frontend-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: k8s-controller-ingress
+  namespace: k8s-go-controller
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
